See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

Not yet  BJH  Release 10.53.00

              pamtopdbimg: fix corrupted output image.  Thanks Scott Pakin.

              pdbimgtopam: fix corrupted output image.  Thanks Scott Pakin.

              Rename optParseOptions3 to pm_optParseOptions3, etc.

10.09.26 BJH  Release 10.52.00

              Add pamtopdbimg, pdbimgtopam.

              Add pamrecolor.  Thanks Scott Pakin.

              anytopnm: Use 'pngtopam' shell command instead of 'pngtopnm'.

              pnmtopng:  -libversion doesn't report level of linked libz.
              It was a modularity violation and caused build failures on
              Mac OS X, because pnmtopng per se doesn't know about libz --
              it's used by libpng.

              libnetpbm: add pm_readbiglong2, pm_readbiglong2u,
              pm_readlittlelong2, pm_readlittlelong2u: These use the proper
              32 bit integer types instead of "long".  (But the old ones
              still work in legacy code because long is always at least 32
              bits).

              pnmconvol: fix reversed sense of -nooffset.  Introduced in
              10.49.

              ppmtompeg: fix crash with free of unallocated memory.
              Broken after 10.18, not later than 10.26.

              Build: fix parallel make - multiple simultaneous attempts to
              build lib/util/importinc.

              Build: don't fail due to SIGRTMIN, SIGRTMAX being undefined.

              Build: don't expect snprintf() to exist.

              Build: don't use <strings.h> or bzero().

              Build: fix PNGVER.  Thanks Matthew Fischer
              <futhark@users.sourceforge.net>.

10.06.27 BJH  Release 10.51.00

              Add ppmtoascii.  Thanks "Frank Ch. Eigler" <fche@elastic.org>.

              pnmtops: Add -bitsperpixel option.
