@@ -6,6 +6,12 @@ CHANGE HISTORY
 
 Not yet  BJH  Release 10.53.00
 
+              pamstereogram: Add mapped texture stereogram option.
+              Thanks Scott Pakin.
+
+              pamstereogram: slight change to dpi and eye separation defaults.
+              invert near/far dark/light association.  Thanks Scott Pakin.
+
               pamtopdbimg: fix corrupted output image.  Thanks Scott Pakin.
 
               pdbimgtopam: fix corrupted output image.  Thanks Scott Pakin.
